# PUT_PR_MPI

./: Algorytm.tex  CMakeLists.txt  Makefile  README.markdown  README.md  main  main.cc  main.hh  util.cc  util.hh
Danilecki_template/: Makefile  customqueue.c  customqueue.h  main  main.c  main.cpp  main.h  plik  tags  util.c  util.cpp  util.h  watek_glowny.c  watek_glowny.cpp  watek_komunikacyjny.c  watek_komunikacyjny.cpp
cpp/: main.cc  main.hh
other_bs_do_wywalenia_finalnie/projekt/: communication.cpp  communication.h  main.cpp  tags.h  utils.h
other_bs_do_wywalenia_finalnie/stare/: main.cc  main.hh  util.hh  watek_glowny.cc  watek_komunikacyjny.cc
other_bs_do_wywalenia_finalnie/stare/cpp/: Makefile
projekt/: communication.cpp  main.cpp  utils.cpp  utils.h
